--- a/KaliLife-CRM/KaliLife-CRM.csproj
+++ b/KaliLife-CRM/KaliLife-CRM.csproj
@@ -11,6 +11,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\KaliLife-CRM.Biz\KaliLife-CRM.Biz.csproj" />
+    <ProjectReference Include="..\KaliLife-CRM.Models\KaliLife-CRM.Models.csproj" />
+    <ProjectReference Include="..\KaliLife-CRM.Repo\KaliLife-CRM.Repo.csproj" />
+    <ProjectReference Include="..\KaliLife-CRM.Util\KaliLife-CRM.Util.csproj" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="5.0.7" />
   </ItemGroup>
 
