--- a/KaliLife-CRM.Repo/KaliLife-CRM.Repo.csproj
+++ b/KaliLife-CRM.Repo/KaliLife-CRM.Repo.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -8,5 +8,9 @@
   <ItemGroup>
     <ProjectReference Include="..\KaliLife-CRM.Models\KaliLife-CRM.Models.csproj" />
     <ProjectReference Include="..\KaliLife-CRM.Util\KaliLife-CRM.Util.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.7" />
   </ItemGroup>
 </Project>
